# zmk-usb-bridge

./: AGENTS.md  CMakeLists.txt  Kconfig  README.md  prj.conf  west.yml
boards/: seeeduino_xiao_ble.overlay  xiao_ble_nrf52840.conf
config/: ci.conf  dev-rtt.conf  user.conf
docs/: README.md
docs/adr/: 0001-platform-selection.md  0002-ble-identification-strategy.md  0003-usb-hid-minimum-descriptor.md  0004-ble-stack-baseline.md  0005-build-and-distribution-workflow.md  0006-esp-idf-version-pin.md  0006-zephyr-upstream-and-version-pin.md  0007-artifact-and-debug-console-policy.md
docs/cross-cutting/: persistence.md  state-machine.md
docs/foundation/: architecture.md  build-and-distribution.md  requirements.md
docs/subsystems/: ble-runtime.md  ble.md  recovery-ui.md  usb.md
docs/validation/: debugging.md  plan.md  status.md
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c
main/include/zmk_usb_bridge/: ble_command.h  ble_connection.h  ble_manager.h  ble_reconnect.h  ble_runtime.h  ble_scan.h  bridge.h  hog_client.h  pairing_filter.h  persist.h  recovery_ui.h  startup.h  state_machine.h  status.h  types.h  usb_bridge.h
main/src/: ble_connection.c  ble_manager.c  ble_reconnect.c  ble_runtime.c  ble_scan.c  bridge.c  hog_client.c  pairing_filter.c  persist.c  recovery_ui.c  startup.c  state_machine.c  usb_bridge.c
snippets/zub-usb-logging/: snippet.yml  zub-usb-logging.conf  zub-usb-logging.overlay
